  https://sourceforge.net/p/omegat/feature-requests/1448/

  - Remove "Restore defaults" button where it has no function
  https://sourceforge.net/p/omegat/feature-requests/1364/

  - Upgrade to LanguageTool 3.6
  https://sourceforge.net/p/omegat/feature-requests/1299/

  - Improve TBX parsing
  https://sourceforge.net/p/omegat/feature-requests/1268/

  - Support SRX format


  Bug fixes:

  - Languagetool crashes when reloading the project
  https://sourceforge.net/p/omegat/bugs/1182/

  - Stardict dictionary displays apostrophe as html entity code
  https://sourceforge.net/p/omegat/bugs/1181/

  - #1180 Font does not scale on HiDPI display on Linux
  https://sourceforge.net/p/omegat/bugs/1180/

  - build/release: Windows binary signature with PKCS#11 HSM
  https://sourceforge.net/p/omegat/bugs/1179/

  - Team project failed to merge changes with TMXMerge
  https://sourceforge.net/p/omegat/bugs/1170/

  - Team(git): when connecting new server, connection failed
  https://sourceforge.net/p/omegat/bugs/1177/

  - The COMPILE event is fired after the target commit
  https://sourceforge.net/p/omegat/bugs/1176/

  - Useless warning log from CSS parser library
  https://sourceforge.net/p/omegat/bugs/1169/

  - OmegaT cannot load a project and error dialog with FileSystemLoopException
  https://sourceforge.net/p/omegat/bugs/1168/

  - Error when trying to backup the project file on Windows
  https://sourceforge.net/p/omegat/bugs/1166/

  - Docker setup of Integration test is not working for Subversion
  https://sourceforge.net/p/omegat/bugs/1165/

  - Project not loaded if it contains DTD internal entities
  https://sourceforge.net/p/omegat/bugs/1163/

  - SRX conf file is produced with localized name of language
  https://sourceforge.net/p/omegat/bugs/1160/

  - Backup file does not created in no-team project
  https://sourceforge.net/p/omegat/bugs/1159/

  - Fixed "null" file names in search results when "Display: file names" checkbox was unchecked