@@ -1238,6 +1238,9 @@ PLUGIN_JAVA_VERSION_ERROR=Error loading : {0}
 PLUGIN_LOAD_JAR=Jar used for plugins: {0}
 PLUGIN_LOAD_OK=Plugin successfully loaded from class '{0}'
 PLUGIN_SKIP_PREVIOUSLY_LOADED=Skipping previously loaded plugin from class '{0}'
+PLUGIN_EXCLUDE_OLD_VERSION=Excluding old version of '{0}' ({1}), keeping {2}
+PLUGIN_EXCLUDE_SIMILAR_VERSION=Similar versions of '{0}' are present ({1} and {2}), keeping the latter
+PLUGIN_EXCLUSION_MESSAGE=The following plugins won't be loaded because newer versions are installed, consider deleting them: {0}
 
 # FilterMaster.java
 
